[package]
name = "hm11"
version = "0.1.0"
authors = ["Scott Mabin <MabezDev@gmail.com>"]

[dependencies]
nb = "0.1.1"
heapless = "0.3.7"

[dependencies.embedded-hal]
version = "0.2.1"
features = ["unproven"]

[dev-dependencies.stm32l4]
version = "0.2.1"
features = ["stm32l4x2", "rt"]

[dev-dependencies.stm32l432xx-hal]
version = "0.1.0"

[dev-dependencies]
panic-semihosting = "0.3.0"
cortex-m-semihosting = "0.3.0"
cortex-m = "0.5.2"
nb = "0.1.1"
cortex-m-rt = "0.5.1"
heapless = "0.3.6"



[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true