[package]
name = "hm11"
version = "0.1.0"
authors = ["Scott Mabin <MabezDev@gmail.com>"]
edition = "2018"

[dependencies]
nb = "0.1.1"

[dependencies.heapless]
version = "0.4.0"
features = ["const-fn"]

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[dev-dependencies.stm32l4xx-hal]
version = "0.3.1"
features = ["rt", "stm32l4x2"]

[dev-dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.5.0"
nb = "0.1.1"





[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true