[package]
name = "hm11"
version = "0.2.1"
authors = ["Scott Mabin <MabezDev@gmail.com>"]
description = "HM-11 Bluetooth AT driver crate"
keywords = ["no-std", "hm11", "hm-11", "bluetooth", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/MabezDev/hm11"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*",
    ".vscode/",
    ".vscode/*",
]
edition = "2018"

[dependencies]
nb = "0.1.1"

[dependencies.heapless]
version = "0.4.1"

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[dev-dependencies.stm32l4xx-hal]
version = "0.3.3"
features = ["rt", "stm32l4x2"]

[dev-dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.5.0"
nb = "0.1.1"


[features]
const-fn = ["heapless/const-fn"]


[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true